--- a/app/src/main/res/menu/top_app_bar_menu.xml
+++ b/app/src/main/res/menu/top_app_bar_menu.xml
@@ -15,7 +15,7 @@
 
     <item
         android:id="@+id/action_add_post"
-        android:icon="@drawable/ic_add_white"
+        android:icon="@drawable/ic_add"
         android:title="Add Post"
         app:showAsAction="ifRoom" />
 
