--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -50,6 +50,7 @@
         <item name="colorSurfaceContainer">@color/md_theme_surfaceContainer</item>
         <item name="colorSurfaceContainerHigh">@color/md_theme_surfaceContainerHigh</item>
         <item name="colorSurfaceContainerHighest">@color/md_theme_surfaceContainerHighest</item>
+        <item name="colorOnSurfaceContainer">@color/md_theme_onSurface</item>
         
         <!-- Post Card Theme Attributes (Dark Theme) -->
         <item name="postCardBackgroundColor">?attr/colorSurfaceContainerLow</item>
