--- a/app/src/main/res/layout/item_post_detail_image.xml
+++ b/app/src/main/res/layout/item_post_detail_image.xml
@@ -28,7 +28,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_like" />
+                android:src="@drawable/ic_reaction_like" />
 
             <TextView
                 android:id="@+id/tvLikesCount"
@@ -44,7 +44,7 @@
                 android:layout_height="48dp"
                 android:layout_marginStart="16dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_comment" />
+                android:src="@drawable/icon_comment_24px" />
 
             <TextView
                 android:id="@+id/tvCommentsCount"
