--- a/app/src/main/res/layout/bottom_sheet_comment_options.xml
+++ b/app/src/main/res/layout/bottom_sheet_comment_options.xml
@@ -33,7 +33,8 @@
         android:text="@string/reply"
         android:gravity="start|center_vertical"
         app:icon="@drawable/icon_reply_round"
-        app:iconGravity="start" />
+        app:iconGravity="start"
+        app:iconSize="24dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnCopy"
@@ -43,7 +44,8 @@
         android:text="@string/copy"
         android:gravity="start|center_vertical"
         app:icon="@drawable/icon_content_copy_round"
-        app:iconGravity="start" />
+        app:iconGravity="start"
+        app:iconSize="24dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnShare"
@@ -53,7 +55,8 @@
         android:text="@string/share"
         android:gravity="start|center_vertical"
         app:icon="@drawable/icon_share_round"
-        app:iconGravity="start" />
+        app:iconGravity="start"
+        app:iconSize="24dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnHide"
@@ -63,7 +66,8 @@
         android:text="@string/hide_comment"
         android:gravity="start|center_vertical"
         app:icon="@drawable/icon_hide_source_round"
-        app:iconGravity="start" />
+        app:iconGravity="start"
+        app:iconSize="24dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnReport"
@@ -73,7 +77,8 @@
         android:text="@string/report"
         android:gravity="start|center_vertical"
         app:icon="@drawable/icon_report_problem_round"
-        app:iconGravity="start" />
+        app:iconGravity="start"
+        app:iconSize="24dp" />
 
     <View
         android:id="@+id/dividerOwnerActions"
@@ -92,7 +97,8 @@
         android:gravity="start|center_vertical"
         android:visibility="gone"
         app:icon="@drawable/icon_push_pin_round"
-        app:iconGravity="start" />
+        app:iconGravity="start"
+        app:iconSize="24dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnEdit"
@@ -103,7 +109,8 @@
         android:gravity="start|center_vertical"
         android:visibility="gone"
         app:icon="@drawable/icon_drive_file_rename_outline_round"
-        app:iconGravity="start" />
+        app:iconGravity="start"
+        app:iconSize="24dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnDelete"
@@ -115,6 +122,7 @@
         android:visibility="gone"
         app:icon="@drawable/icon_delete_round"
         app:iconGravity="start"
-        app:iconTint="?attr/colorError" />
+        app:iconTint="?attr/colorError"
+        app:iconSize="24dp" />
 
 </LinearLayout>
