--- a/app/src/main/res/layout/synapse_comments_list_cv.xml
+++ b/app/src/main/res/layout/synapse_comments_list_cv.xml
@@ -106,11 +106,11 @@
 					<ImageView
 						android:id="@+id/more_ic"
 						android:focusable="false"
-						android:layout_width="28dp"
-						android:layout_height="22dp"
-						android:src="@drawable/default_image"
+						android:layout_width="20dp"
+						android:layout_height="20dp"
+						android:src="@drawable/ic_more_vert"
 						android:scaleType="fitCenter"
-						android:alpha="0.0" />
+						/>
 				</LinearLayout>
 			</LinearLayout>
 			<LinearLayout
@@ -281,7 +281,7 @@
 		android:id="@+id/progress"
 		android:focusable="false"
 		android:layout_width="match_parent"
-		android:layout_height="22dp"
+		android:layout_height="20dp"
 		android:layout_marginBottom="8dp"
 		android:indeterminate="false"
 		style="?android:progressBarStyle"
