--- a/app/src/main/res/layout/reply_comments_synapse.xml
+++ b/app/src/main/res/layout/reply_comments_synapse.xml
@@ -101,8 +101,7 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:gravity="center_horizontal|center_vertical"
-					android:orientation="vertical"
-					
+					android:orientation="vertical">
 					<ImageView
 						android:id="@+id/more_ic"
 						android:focusable="false"
