--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -48,4 +48,19 @@
 			android:layout_height="48dp"
 			style="?android:progressBarStyle" />
 	</LinearLayout>
+	<LinearLayout
+		android:id="@+id/empty_state"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:gravity="center"
+		android:orientation="vertical"
+		android:padding="32dp"
+		android:visibility="gone">
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/no_posts"
+			android:textSize="18sp"
+			android:textColor="?android:textColorSecondary" />
+	</LinearLayout>
 </FrameLayout>
